# machine_learning

./: .gitignore  README.md
NeuralNetworkLib/: CMakeLists.txt
NeuralNetworkLib/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
NeuralNetworkLib/build_debug/src/: Makefile  cmake_install.cmake
NeuralNetworkLib/build_debug/src/lib/: Makefile  cmake_install.cmake
NeuralNetworkLib/build_debug/src/test/: Makefile  cmake_install.cmake
NeuralNetworkLib/include/: LinearModel.h  PerceptronMulticoucheModel.h  RBFModel.h
NeuralNetworkLib/src/: CMakeLists.txt
NeuralNetworkLib/src/lib/: CMakeLists.txt  LinearModel.cpp  PerceptronMulticoucheModel.cpp  RBFModel.cpp
NeuralNetworkLib/src/test/: CMakeLists.txt  main.cpp
projet_visual/DllForUnity/: DllForUnity.sln  DllForUnity.vcxproj  DllForUnity.vcxproj.filters  LinearModel.cpp  LinearModel.h  PerceptronMulticoucheModel.h  RBFModel.cpp  RBFModel.h
projet_visual/DllForUnity/x64/Debug/: DllForUnity.exp  TestDllForUnity.ilk  linearmodel.obj.enc  vc140.idb
projet_visual/DllForUnity/x64/Debug/DllForUnity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DllForUnity.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
projet_visual/NeuralNetworkDll/: CMakeLists.txt
projet_visual/NeuralNetworkDll/include/: LinearModel.h  MNIST.hpp
projet_visual/NeuralNetworkDll/src/: CMakeLists.txt
projet_visual/NeuralNetworkDll/src/DLL/: CMakeLists.txt  LinearModel.cpp
projet_visual/NeuralNetworkDll/src/TestDLL/: CMakeLists.txt  main.cpp
projet_visual/TestDllForUnity/: TestDllForUnity.vcxproj  TestDllForUnity.vcxproj.filters  main.cpp
projet_visual/TestDllForUnity/x64/Debug/: vc140.idb
projet_visual/TestDllForUnity/x64/Debug/TestDllForUnity.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestDllForUnity.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
unity/TestDll/Assets/Materials/: Blue.mat  Green.mat  Red.mat  Yellow.mat
unity/TestDll/Assets/Scenes/: Classification_regression.unity  Classification_regression_multiclasse.unity  Classification_regression_multicouche.unity  MNIST.unity
unity/TestDll/Assets/Scripts/: Ball.cs  BallMNIST.cs  BallMNISTInfo.cs  GameHandler.cs  MethodRBF.cs  Perceptron.cs  ReadMNIST.cs  WrapperDllMachineLearning.cs
unity/TestDll/Assets/prefabs/: Sphere.prefab  sphereMNIST.prefab
unity/TestDll/ProjectSettings/: ProjectSettings.asset
(+8 files in other folders)
